Changes in date null as per requirements and changes in requests

--- a/src/app/pages/requests/request-action/request-action.component.html
+++ b/src/app/pages/requests/request-action/request-action.component.html
@@ -16,7 +16,7 @@
 
   <div class="mb-3">
     <label class="form-label">Corporate Remarks</label>
-    <textarea class="form-control" [value]="escrow.remarks" rows="3" placeholder="Enter remarks" disabled="{{true}}}"></textarea>
+    <textarea class="form-control" [value]="escrow.remarks" rows="3" placeholder="Enter remarks" disabled="{{true}}"></textarea>
     <app-show-errors [ctrl]="releaseForm.get('remarks')" [requiredMesg]="'Remarks is Required'"></app-show-errors>
   </div>
 
