--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -112,7 +112,7 @@
       </div>
 
       <div class="mt-3">
-        <dynamic-table  [isActionDisabledFn]="isActionDisabled" [apiUrl]="environment.baseUrl + 'escrow/list'" [pageSize]="10"
+        <dynamic-table [isDateFilledType]="null"  [isActionDisabledFn]="isActionDisabled" [apiUrl]="environment.baseUrl + 'escrow/list'" [pageSize]="10"
        [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
         </dynamic-table>
         <!-- <table class="table">
