--- a/src/app/pages/dashboard/add-escrow/basic-details/add-entity-modal/add-entity-modal.component.html
+++ b/src/app/pages/dashboard/add-escrow/basic-details/add-entity-modal/add-entity-modal.component.html
@@ -147,7 +147,8 @@
                 <!-- Show image URL with option to remove if existing -->
                 <div *ngIf="form.get('entity_type')?.value !== 'new' && form.get('rep_profile_pic')?.value">
                     <p class="mb-1">
-                        <a [href]="form.get('rep_profile_pic')?.value" target="_blank" class="text-decoration-none">
+                        <!-- [href]="form.get('rep_profile_pic')?.value"  -->
+                        <a (click)="_FileUploadService.HandleFileOpen('',form.get('rep_profile_pic')?.value,'corporate')" class="text-decoration-none">
                             <img src="assets/img/view.png" class="pe-2"> View Uploaded Image
                         </a>
                     </p>
