--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-agreement/view-agreement.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-agreement/view-agreement.component.html
@@ -18,7 +18,8 @@
                 </h4>
                 <div><i class="bi bi-eye" role="button"></i></div>
                 <div class="d-flex gap-3">
-                    <button class="border-0 bg-transparent" (click)="openInNewTab(agreements?.document_path)"><img
+                    <!-- (click)="openInNewTab(agreements?.document_path)"  -->
+                    <button class="border-0 bg-transparent" (click)="_FileUploadService.HandleFileOpen(escrowId,agreements?.document_path,'agreement')"><img
                             src="assets/img/view.png"></button>
                     <!-- <button class="border-0 bg-transparent" aria-label="Refresh">
                         <i class="fas fa-sync-alt"></i>
@@ -49,7 +50,8 @@
                 </h4>
                   <div><i class="bi bi-eye" role="button"></i></div>
                 <div class="d-flex gap-3">
-                    <button class="border-0 bg-transparent" (click)="openInNewTab(doc?.url)"><img
+                    <!-- (click)="openInNewTab(doc?.url)"  -->
+                    <button class="border-0 bg-transparent" (click)="_FileUploadService.HandleFileOpen(escrowId,doc?.url,'agreement')"><img
                             src="assets/img/view.png"></button>
                 </div>
             </div>
