--- a/src/app/pages/release/view-edit-release/view-edit-release.component.html
+++ b/src/app/pages/release/view-edit-release/view-edit-release.component.html
@@ -44,7 +44,8 @@
             
       <div>
              <div *ngIf="fileUrl" class="mt-1">
-        <a [href]="fileUrl" target="_blank" class=""><img src="assets/img/view.png" class="pe-2"></a>
+               <!-- [href]="fileUrl" target="_blank" -->
+        <a (click)="_FileUploadService.HandleFileOpen(escrowId,fileUrl,'release-add-edit')" class=""><img src="assets/img/view.png" class="pe-2"></a>
       </div>
       </div>
 </div>  
