--- a/src/app/pages/requests/view-edit-request/view-edit-request.component.html
+++ b/src/app/pages/requests/view-edit-request/view-edit-request.component.html
@@ -43,7 +43,8 @@
 
       <div>
              <div *ngIf="fileUrl" class="mt-1">
-        <a [href]="fileUrl" target="_blank" class=""><img src="assets/img/view.png" class="pe-2"></a>
+              <!-- [href]="fileUrl" target="_blank" -->
+        <a  (click)="_FileUploadService.HandleFileOpen(escrowId,fileUrl,'request')" class=""><img src="assets/img/view.png" class="pe-2"></a>
       </div>
       </div>
 </div>
