Worked on resetpassoword changes login icons

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -30,6 +30,15 @@
               <img src="assets/img/logos/verify-logo.png" alt="">
             </div>
             <div>
+              <img src="assets/img/logos/excorow2.png" alt="">
+            </div>
+            <div>
+              <img src="assets/img/logos/sprintnxt4.png" alt="">
+            </div>
+            <div>
+              <img src="assets/img/logos/sprintopn3.png" alt="">
+            </div>
+            <!-- <div>
               <img src="assets/img/logos/excode-logo.png" alt="">
             </div>
             <div>
@@ -47,6 +56,12 @@
             <div>
               <img src="assets/img/logos/verify-logo.png" alt="">
             </div>
+            <div>
+              <img src="assets/img/logos/excode-logo.png" alt="">
+            </div>
+            <div>
+              <img src="assets/img/logos/verify-logo.png" alt="">
+            </div> -->
           </div>
         </div>
       </div>
