--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -35,9 +35,9 @@
             <div>
               <img src="assets/img/logos/sprintnxt4.png" alt="">
             </div>
-            <div>
+            <!-- <div>
               <img src="assets/img/logos/sprintopn3.png" alt="">
-            </div>
+            </div> -->
             <!-- <div>
               <img src="assets/img/logos/excode-logo.png" alt="">
             </div>
