--- a/src/app/pages/staff-management/add-staff/add-staff.component.html
+++ b/src/app/pages/staff-management/add-staff/add-staff.component.html
@@ -59,7 +59,7 @@
                     </app-show-errors>
                 </div>
             </div>
-        <div class="col-12 col-lg-6">
+        <!-- <div class="col-12 col-lg-6">
                 <div class="form-group">
                     <label class="form-label d-block mb-2">Rights:</label>
                     <div class="form-check form-check-inline">
@@ -76,7 +76,7 @@
                     <app-show-errors [ctrl]="addStaffForm.get('rights')" [requiredMesg]="'Rights is Required'">
                     </app-show-errors>
                 </div>
-            </div>
+            </div> -->
 
 
             <!-- <div class="mt-4">
