--- a/src/app/pages/release/release-action/release-action.component.html
+++ b/src/app/pages/release/release-action/release-action.component.html
@@ -29,7 +29,7 @@
 
             <div *ngIf="fileUrl" class="mt-1">
                 <!-- [href]="fileUrl" target="_blank" -->
-                <a  (click)="_FileUploadService.HandleFileOpen(escrowId,fileUrl,'release-action')" class="btn btn-sm btn-outline-primary">
+                <a  (click)="$event.preventDefault(); $event.stopPropagation();_FileUploadService.HandleFileOpen(escrowId,fileUrl,'release-action')" class="btn btn-sm btn-outline-primary">
                     <img src="assets/img/upload.png"> View Uploaded Document
                 </a>
             </div>
