--- a/src/app/pages/requests/view-edit-request/view-edit-request.component.html
+++ b/src/app/pages/requests/view-edit-request/view-edit-request.component.html
@@ -42,10 +42,12 @@
       </div></div>
 
       <div>
-             <div *ngIf="fileUrl" class="mt-1">
-              <!-- [href]="fileUrl" target="_blank" -->
-        <a  (click)="_FileUploadService.HandleFileOpen(escrowId,fileUrl,'request')" class=""><img src="assets/img/view.png" class="pe-2"></a>
+            <div *ngIf="fileUrl" class="mt-1">
+        <a (click)="$event.preventDefault(); $event.stopPropagation(); _FileUploadService.HandleFileOpen(escrowId, fileUrl, 'request')">
+          <img src="assets/img/view.png" class="pe-2">
+        </a>
       </div>
+
       </div>
 </div>
  
