--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
@@ -226,27 +226,15 @@
     </div> -->
 
 
-    <div class="row" *ngIf="this.depositDetails?.deposit?.documents">
+    <!-- <div class="row" *ngIf="this.depositDetails?.deposit?.documents">
       <h5 class="my-3">Additional Documents</h5>
       <ng-container *ngFor="let doc of this.depositDetails.deposit.documents.split(',')">
         <div class="col-12 col-lg-6">
-          <!-- <div class="upload-doc position-relative" *ngIf="!viewMode">
-            <h6 class="my-3">{{doc}}</h6>
-            <label class="custom-file-upload mb-2">
-              <img src="assets/img/upload.png" class="me-2">
-              <div class="d-flex flex-column">
-                Upload Document
-              </div>
-            </label>
-            <input type="file" id="fileInput" class="form-control" multiple (change)="HandleDocUpload($event, doc)" />
-          </div> -->
-
           <ul class="list-group mb-2 ">
             <li class="list-group-item d-flex justify-content-between flex-wrap"
               *ngIf="uploadedDocuments[this.CertName(doc)]">
               <span class="text-success">
                 {{ doc.replace('Upload', '') }}</span>
-                <!-- [href]="uploadedDocuments[this.CertName(doc)].url" target="_blank" -->
               <a  *ngIf="userType === 'depositor'" (click)="_FileUploadService.HandleFileOpen(escrowId,uploadedDocuments[this.CertName(doc)].url,'deposit-additional-documents')"><img
                   src="assets/img/view.png"></a>
             </li>
@@ -254,7 +242,7 @@
         </div>
       </ng-container>
 
-    </div>
+    </div> -->
     <div class="row" *ngIf="this.depositDetails?.deposit?.certificates">
       <h5 class="my-3">Certificates</h5>
       <ng-container *ngFor="let cert of this.depositDetails.deposit.certificates.split(',')">
