--- a/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
+++ b/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <input type="checkbox" class="form-check-input position-absolute top-0 end-0 m-3"
-                [checked]="isSelected(opt.key)" readonly />
+                [checked]="isSelected(opt.key)"  />
             <button *ngIf="opt.isCustom" type="button"
                 class="btn btn-outline-danger position-absolute bottom-0 end-0 m-2 px-3"
                 (click)="removeCustom(opt.key)"><i class="fas fa-trash-alt"></i></button>
