--- a/src/app/pages/release/release.component.html
+++ b/src/app/pages/release/release.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="deposit-table gap-4 p-3 mt-3">
-  <dynamic-table [apiUrl]="environment.baseUrl + 'escrow/release/list'" [pageSize]="10"
+  <dynamic-table [isDateFilledType]="null" [apiUrl]="environment.baseUrl + 'escrow/release/list'" [pageSize]="10"
                  [httpHeaders]="httpHeaders"   (action)="onTableAction($event)">
   </dynamic-table>
 </div>
