--- a/src/app/pages/requests/requests.component.html
+++ b/src/app/pages/requests/requests.component.html
@@ -5,7 +5,7 @@
   <option value="0">Rejected</option>
 </select>
 <div class="deposit-table gap-4 p-3 mt-3">
-  <dynamic-table [apiUrl]="environment.baseUrl + 'escrow/requests/list'" [pageSize]="10"
+  <dynamic-table [isDateFilledType]="null" [apiUrl]="environment.baseUrl + 'escrow/requests/list'" [pageSize]="10"
                  [httpHeaders]="httpHeaders"   (action)="onTableAction($event)"
                 [customParams]="{status: selectedStatus}"
   >
