--- a/src/app/pages/dashboard/add-escrow/agreement/agreement.component.html
+++ b/src/app/pages/dashboard/add-escrow/agreement/agreement.component.html
@@ -73,7 +73,7 @@
             <div *ngIf="docCtrl.get('url')?.value" class="text-success">
                  <!-- [href]="docCtrl.get('url')?.value"  target="_blank"-->
                 Uploaded ✔️ –
-                <a (click)="_FileUploadService.HandleFileOpen(escrowId,docCtrl.get('url')?.value,'agreement')">View</a>
+                <button class="btn btn-primary px-2 py-1" (click)="_FileUploadService.HandleFileOpen(escrowId,docCtrl.get('url')?.value,'agreement')">View</button>
             </div>
             <!-- *ngIf="additionalDocs.length > 1" -->
             <button type="button" class="btn btn-danger btn-sm mt-2" (click)="removeAdditionalDoc(i)">
