--- a/src/app/pages/top-bar/top-bar.component.html
+++ b/src/app/pages/top-bar/top-bar.component.html
@@ -8,7 +8,7 @@
             </div>
           </li>
           <li><i class="fa-regular fa-circle-user"></i></li> -->
-          <li><a href="" (click)="logOut()" class="text-primary"><i class="fas fa-power-off"></i></a></li>
+          <li><a (click)="logOut()" class="text-primary"><i class="fas fa-power-off"></i></a></li>
 
   
         <!-- <li>
