--- a/src/app/pages/dashboard/add-escrow/agreement/agreement.component.html
+++ b/src/app/pages/dashboard/add-escrow/agreement/agreement.component.html
@@ -83,7 +83,7 @@
       
             <!-- *ngIf="additionalDocs.length > 1" -->
         
-        </div>>
+        </div>
         </div>
     </div>
 
